Change display to potentially resolve issue with menu on ios safari

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -116,10 +116,11 @@
 @media (max-width: 769px) {
   .menu-btn {
     display: block;
+    visibility: hidden;
   }
 
   .nav-content ul {
-    display: none;
+    display: none !important;
   }
 }
 
